Sidebar doesn't correctly reflow when resized
Categories
(Firefox :: Theme, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox105 | --- | unaffected |
| firefox106 | --- | unaffected |
| firefox107 | --- | verified |
People
(Reporter: bloonyapprentice, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files)
Steps to Reproduce
- Open any sidebar, for example Bookmarks panel with Ctrl+B.
- Resize the sidebar to the left or right.
- Observe the content of the sidebar.
Actual result
The sidebar content is stuck to the initial layout regardless of the space available.
Expected result
The sidebar content should adapt to the size of the sidebar like before.
Regression range
mozregression points to https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=dd74d4159c5dfa4307f663df24cf64766a4d5781&tochange=61cde6b6f2737eee00c49fb75390aff3d814f677, which is bug 1789168.
Notes
- As you can see from the video, the sidebar no longer has a minimum or maximum width. This could be a plus for some people if they want an even smaller or bigger sidebar.
- This impacts vertical tabs extensions like TreeStyleTabs, Sidebery etc
| Reporter | ||
Comment 1•3 years ago
|
||
A screen recording of the behaviour before the regression for reference.
Updated•3 years ago
|
Comment 2•3 years ago
|
||
Set release status flags based on info from the regressing bug 1789168
:emilio, since you are the author of the regressor, bug 1789168, could you take a look? Also, could you set the severity field?
For more information, please visit auto_nag documentation.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 3•3 years ago
|
||
Add some basic min/max size support in splitters, and make the width
part of the element we're splitting rather than the <browser> child.
I don't think the nsSplitterFrame changes are needed for this in
particular, since we're only distributing across two items (min and max
are useful only if we can distribute the space that one item can't fill
with another), but it doesn't hurt.
| Assignee | ||
Comment 4•3 years ago
|
||
Thanks for reporting this!
Comment 11•3 years ago
|
||
| bugherder | ||
Comment 12•3 years ago
|
||
Bug 1792299 was marked as duplicate, but it hasn't been fixed by this patch.
| Assignee | ||
Comment 13•3 years ago
|
||
The remembering the width / height should be covered by bug 1792748
Updated•3 years ago
|
I managed to reproduce this issue on a 2022-09-26 Nightly build on Windows 10 using the STR from the Description. Verified as fixed on Firefox 107.0b3(build ID: 20221020202724) and Nightly 108.0a1(build ID: 20221020215126) on Windows 10, macOS 12, Ubuntu 22.
Description
•