Bug 1792277 - Fix sidebar resizing with flexbox emulation. r=Gijs,dholbert

Add some basic min/max size support in splitters, and make the width
part of the element we're splitting rather than the <browser> child.

I don't _think_ the nsSplitterFrame changes are needed for this in
particular, since we're only distributing across two items (min and max
are useful only if we can distribute the space that one item can't fill
with another), but it doesn't hurt.

Differential Revision: https://phabricator.services.mozilla.com/D158074